# app/Http/Controllers/Api/ArtistController.php
@@ -16,6 +16,7 @@ class ArtistController extends BaseController
      *     path="/api/artists",
      *     summary="Get all artists",
      *     tags={"Artist"},
+     *     security={{"bearerAuth": {}}, {}},
      *     @OA\Response(response=200, description="Artists fetched successfully")
      * )
      */
@@ -42,6 +43,7 @@ class ArtistController extends BaseController
      *         required=true,
      *         @OA\Schema(type="integer")
      *     ),
+     *     security={{"bearerAuth": {}}, {}},
      *     @OA\Response(response=200, description="Artist details fetched")
      * )
      */
